--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leetcode-helper",
+  "name": "leetcode-test-helper",
   "version": "0.1.0",
   "description": "LeetCode helper.",
   "type": "module",
@@ -8,12 +8,16 @@
   },
   "types": "src/main.ts",
   "main": "bin/cli.js",
+  "files": [
+    "bin",
+    "src"
+  ],
   "scripts": {
     "start": "node --no-warnings --experimental-vm-modules --experimental-specifier-resolution=node --loader ts-node/esm ./src/lib/createPractice.ts"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yi-ge/leetcode-helper.git"
+    "url": "git+https://github.com/yi-ge/leetcode-test-helper.git"
   },
   "keywords": [
     "leetcode",
@@ -23,19 +27,20 @@
   "author": "yi-ge <a@wyr.me>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yi-ge/leetcode-helper/issues"
+    "url": "https://github.com/yi-ge/leetcode-test-helper/issues"
   },
-  "homepage": "https://github.com/yi-ge/leetcode-helper#readme",
+  "homepage": "https://github.com/yi-ge/leetcode-test-helper#readme",
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "typescript": "^4.7.4"
+    "@types/node": "^18.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "puppeteer": "^15.2.0",
-    "puppeteer-extra": "^3.3.0",
-    "puppeteer-extra-plugin-stealth": "^2.10.1"
+    "puppeteer": "^18.0.3",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
