--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "leetcode-test-helper",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "LeetCode helper.",
   "type": "module",
   "bin": {
-    "lcp": "./bin/cli.js"
+    "lcp": "./bin/main.js"
   },
   "files": [
-    "bin",
-    "src",
-    "tsconfig.json"
+    "bin"
   ],
+  "scripts": {
+    "build": "tsc"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yi-ge/leetcode-test-helper.git"
@@ -27,16 +28,15 @@
   },
   "homepage": "https://github.com/yi-ge/leetcode-test-helper#readme",
   "devDependencies": {
-    "@types/node": "^18.0.0"
+    "@types/node": "^18.0.0",
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "puppeteer": "^18.0.3",
-    "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "playwright": "^1.26.0",
+    "playwright-extra": "^4.3.5",
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
 }
