--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["leetcode", "networkidle", "nodenext"]
+  "cSpell.words": [
+    "backgrounding",
+    "breakpad",
+    "leetcode",
+    "networkidle",
+    "nodenext",
+    "repost"
+  ]
 }
