--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "cSpell.words": [
     "backgrounding",
     "breakpad",
+    "DCMAKE",
+    "gtest",
     "leetcode",
     "networkidle",
     "nodenext",
